# Etoile

./: .gitignore  CMakeLists.txt  Makefile  README.en.md  README.md  README.zh-CN.md  TODO.md
.github/workflows/: cmake-single-platform.yml
eva/: Makefile  playground.c
src/: aff_proc.lua  aff_processor.lua  args.c  args.h  main.c  schem_index.h  schem_proj.h  utils.c  utils.h  version.h
test/: test_utils.c
